projects/ce-com/content-management-service/k8s-config/dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: cecom-content
  name: cecom-content-svc
  namespace: cecom
spec:
  ports:
    - port: 8012
      protocol: TCP
      targetPort: 8012
  selector:
    app: cecom-content
